@@ -183,7 +183,6 @@ set(LIBGED_SOURCES
   perspective.c
   pix2fb.c
   plot.c
-  polybinout.c
   pmat.c
   pmodel2view.c
   png.c
